# stock_news

./: .gitignore  PROJECT_SUMMARY.md  README.md  SystemDesign.md  events.json
.claude/: settings.local.json
backend/: .env.example  .gitignore  README.md  init_data.bat  init_data.py  pyproject.toml  test_auth_flow.py  update_data.bat  update_data.py
backend/app/: config.py  main.py
backend/app/core/: database.py
backend/app/models/: __init__.py  common.py  event.py  payment.py  sector.py  stock.py  user.py
backend/app/routers/: auth.py  dashboard.py  events.py  opportunity_radar.py  payments.py  sectors.py  stocks.py
backend/app/services/: ai_service.py  auth.py  database_service.py  payment_service.py  pdf_service.py  radar_scoring.py  sms_service.py
backend/scripts/: clean_pdfs.py
backend/spider/: README.md  init_data.bat  run_analysis.py  run_init.py  run_update.py  update_data.bat
backend/spider/analyze/: analyze_events.py  check_failed_events.py  check_pending_events.py
backend/spider/common/: bse_notice_fetcher.py  notice_fetcher.py  sse_notice_fetcher.py  sse_waf_solver.py  stock_provider.py  szse_notice_fetcher.py
backend/spider/init/: __init__.py  init_events.py
backend/spider/update/: README.md  __init__.py  bse_notice_monitor.py  sse_notice_monitor.py  szse_notice_monitor.py  telegraph_monitor.py  update_events.py
frontend/: DESIGN_SPECIFICATION.md  DESIGN_UPGRADE.md  QUICK_START.md  README.md  components.d.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: auth.ts  dashboard.ts  ecoSignal.ts  events.ts  index.ts  opportunityRadar.ts  payments.ts  sectors.ts  stocks.ts  types.ts
frontend/src/components/: EventCard.vue
frontend/src/composables/: useOpportunityRadar.ts
frontend/src/layouts/: AuthLayout.vue  DefaultLayout.vue
注册公司/: 产品文档.docx
(+27 files in other folders)
