[project]
name = "stock-news-backend"
version = "0.1.0"
description = "Stock news analysis system backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "motor>=3.3.0",
    "pymongo>=4.6.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "zhipuai>=2.0.0",
    "akshare>=1.12.0",
    "httpx>=0.25.0",
    "python-dateutil>=2.8.0",
    "sniffio>=1.3.0",
    "anyio>=3.7.0",
    "tqdm>=4.67.1",
    "tenacity>=9.1.2",
    "lxml>=6.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.11.0",
    "ruff>=0.1.0",
]
